--- a/bab2-tinjauan-pustaka.tex
+++ b/bab2-tinjauan-pustaka.tex
@@ -3,6 +3,21 @@
 %-----------------------------------------------------------------------------%
 Bab ini berisi .... Pada sub-bab \ref{cha:kompar} akan dijelaskan dasar-dasar ...
 %-----------------------------------------------------------------------------%
+\section{Ontologi}
+%-----------------------------------------------------------------------------%
+%-----------------------------------------------------------------------------%
+\section{Zotonic}
+%-----------------------------------------------------------------------------%
+%-----------------------------------------------------------------------------%
+\section{\textit{Template Engine}}
+%-----------------------------------------------------------------------------%
+%-----------------------------------------------------------------------------%
+\section{\textit{Web Services}}
+%-----------------------------------------------------------------------------%
+%-----------------------------------------------------------------------------%
+\section{\textit{Software Product Line}}
+%-----------------------------------------------------------------------------%
+%-----------------------------------------------------------------------------%
 \section{X si sesuatu}\label{cha:kompar}
 %-----------------------------------------------------------------------------%
 Dokumen \latex~sangat mudah, seperti halnya membuat dokumen teks biasa. Ada beberapa perintah yang diawali dengan tanda '\bslash'. Seperti perintah \bslash\bslash~yang digunakan untuk memberi baris baru. 
