--- a/lampiran.tex
+++ b/lampiran.tex
@@ -2,9 +2,9 @@
 \addChapter{Lampiran 1 : Kode Sumber Model ABS}
 \chapter*{Lampiran 1 : Kode Sumber Model ABS}
 %-----------------------------------------------------------------------------%
-\section*{\code{mabs.erl}} \label{cha:lampir-abs}
+\section*{\code{m\_abs.erl}} \label{cha:lampir-abs}
 Skrip ini diletakkan pada direktori \co{/usr/sesuatu} dan hanya dapat dieksekusi oleh \f{root}. Skrip ini berguna untuk menambahkan pengguna baru sesuai dengan konfigurasi baru yang telah ditetapkan.
-\begin{lstlisting}[style=L,caption={Skrip menambahkan pengguna baru},label={lst:mabs}]
+\begin{lstlisting}[style=L,caption={Skrip adaptor m\_abs.erl},label={lst:mabs}]
 %% @author Andri Kurniawan <andrikurniawan.id@gmail.com>
 %% @copyright 2017 Andri Kurniawan
 %% Date: 2017-05-11
