--- a/pengantar.tex
+++ b/pengantar.tex
@@ -6,10 +6,9 @@ Segala puji dan syukur penulis ucapkan atas kehadirat Allah SWT, Tuhan Yang Maha
 Penulisan skripsi ini ditujukan untuk memenuhi salah satu syarat untuk menyelesaikan pendidikan pada Program \gelar, Universitas Indonesia. Penulis sadar bahwa dalam perjalanan perkuliahan hingga penulisan skripsi ini, penulis tidak sendirian. Penulis ingin berterima kasih kepada pihak-pihak berikut :
 
 \begin{enumerate}
-\item Drs. H. Zulhaspan, MM dan Hj.Masreni Nasution selaku orangtua dari penulis yang selalu mendoakan, mendukung serta menjadi motivasi penulis dalam mengerjakan skripsi ini.
-\item Anita Putri dan Akbar Syarif selaku saudara dari penulis yang selalu memberikan dukungan kepada penulis.
 \item Bapak Ade Azurat selaku dosen pembimbing tugas akhir yang telah meluangkan waktunya sepanjang semester ini untuk dapat memberikan arahan, kritik dan saran kepada penulis agar dapat menyelesaikan proses pengerjaan skripsi ini.
 \item Bapak Drs. Lim Yohanes Stefanus M.Math., Ph.D selaku dosen pembimbing akademis penulis, yang selalu membantu penulis selama masa perkuliahan.
+\item Drs. H. Zulhaspan, MM dan Hj. Masreni Nasution selaku orangtua dari penulis serta Anita Putri dan Akbar Syarif selaku saudara dari penulis yang selalu mendoakan, mendukung serta menjadi motivasi penulis dalam mengerjakan skripsi ini.
 \item Kak Afifun yang telah memberikan banyak masukan terkait hal teknis kepada penulis.
 \item Lab RSE
 \item Nabila Akiti Hara selaku pacar dari penulis yang selalu memberikan motivasi dan mendukung penulis selama pengerjaan skripsi serta menemani penulis melalui \textit{facetime}.
@@ -24,7 +23,7 @@ Akhir kata, penulis berharap semoga Allah SWT dapat membalas kebaikan yang diber
 
 \vspace*{0.1cm}
 \begin{flushright}
-Depok, 17 Juni 2017\\[0.1cm]
+Depok, 5 Juni 2017\\[0.1cm]
 \vspace*{1cm}
 \penulis
 
